Fixacao terceira parte align-items

--- a/fundamentos/bloco-6-HTML-CSS:Forms-Flexbox-e-Responsivo/dia-3-CSS-Flexbox-pt1/style-fixacao.css
+++ b/fundamentos/bloco-6-HTML-CSS:Forms-Flexbox-e-Responsivo/dia-3-CSS-Flexbox-pt1/style-fixacao.css
@@ -98,3 +98,69 @@
     display: flex;
     justify-content: space-evenly;
   }
+
+  .box-one {
+    color: #9069EF;
+    background-color: rgb(243, 243, 243);
+    border: 2px solid #232525;
+    font-size: 70px;
+    min-height: 80px;
+    margin: 10px 5px;
+    text-align: center;
+    width: 50px;
+  }
+
+  .box-two {
+    color: #9069EF;
+    background-color: rgb(243, 243, 243);
+    border: 2px solid #232525;
+    font-size: 50px;
+    min-height: 60px;
+    margin: 10px 5px;
+    text-align: center;
+    width: 50px;
+  }
+
+  .box-three {
+    color: #9069EF;
+    background-color: rgb(243, 243, 243);
+    border: 2px solid #232525;
+    font-size: 30px;
+    margin: 10px 5px;
+    min-height: 50px;
+    text-align: center;
+    width: 50px;
+  }
+
+  .box-container12 {
+    background-color: #0fa36b;
+    display: flex;
+    /* ADICIONE AQUI SEUS TESTES */
+  }
+
+  .box-container13 {
+    background-color: #0fa36b;
+    display: flex;
+    align-items: center;
+  }
+
+  .box-container14 {
+    background-color: #0fa36b;
+    display: flex;
+    align-items: flex-start;
+  }
+  .box-container15 {
+    background-color: #0fa36b;
+    display: flex;
+    align-items: flex-end;
+  }
+  .box-container16 {
+    background-color: #0fa36b;
+    display: flex;
+    align-items: stretch;
+  }
+  .box-container17 {
+    background-color: #0fa36b;
+    display: flex;
+    align-items: baseline;
+  }
